Documented the upgrade to digits of precision in BPM, but will only get that precision in native JACK mode, I think.

--- a/tex/seq64_manpage.tex
+++ b/tex/seq64_manpage.tex
@@ -39,6 +39,7 @@
 
    \begin{verbatim}
        sequencer64 [OPTIONS] [FILENAME]
+       seq64 [OPTIONS] [FILENAME]
    \end{verbatim}
 
    \textsl{Sequencer64} accepts the following options, plus an optional name of
